# template_dynlib_cxx

./: CMakeLists.txt  LICENSE  README.md
include/: build_version_utils.h  dynlibconfig.h.in  example_c_interface.h
src/: build_version_utils.cxx  dynlib_error_codes.cxx  example_c_interface.cxx
